[gd_scene load_steps=11 format=3 uid="uid://bbqkowwat8q0g"]

[ext_resource type="Script" path="res://Scenes/enemy_weak.gd" id="1_raxf3"]
[ext_resource type="Texture2D" uid="uid://b0boqh8ajqm1i" path="res://assets/Cop1 Sprite Sheet.png" id="2_sti4s"]
[ext_resource type="PackedScene" uid="uid://b36512nwcb64f" path="res://Scenes/hurt_box.tscn" id="3_mllgv"]
[ext_resource type="PackedScene" uid="uid://c0d4e04tu80gv" path="res://Scenes/hit_box.tscn" id="4_ymfbm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rguq6"]
size = Vector2(5.66667, 6)

[sub_resource type="Animation" id="Animation_55r8b"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterSprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(1, 1)]
}

[sub_resource type="Animation" id="Animation_17076"]
resource_name = "run_left"
length = 0.258
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterSprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0666667, 0.1, 0.133333, 0.166667, 0.2, 0.233333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(1, 1), Vector2i(2, 1), Vector2i(3, 1), Vector2i(4, 1), Vector2i(5, 1), Vector2i(6, 1), Vector2i(7, 1), Vector2i(0, 2)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3jkxx"]
_data = {
"RESET": SubResource("Animation_55r8b"),
"run_left": SubResource("Animation_17076")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0t55j"]
size = Vector2(14, 14.6667)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fynvp"]
size = Vector2(12.3333, 9.66667)

[node name="Enemy_weak" type="CharacterBody2D"]
texture_filter = 1
scale = Vector2(3, 3)
collision_layer = 16
collision_mask = 16
motion_mode = 1
script = ExtResource("1_raxf3")

[node name="CharacterSprite" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(0.75, 0.75)
texture = ExtResource("2_sti4s")
hframes = 8
vframes = 8
frame = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.166667, 1.33333)
shape = SubResource("RectangleShape2D_rguq6")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3jkxx")
}
speed_scale = 0.3

[node name="HurtBox" parent="." instance=ExtResource("3_mllgv")]
collision_layer = 16
collision_mask = 16
HurtBoxType = 1

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2(0.666667, 2)
shape = SubResource("RectangleShape2D_0t55j")

[node name="HitBox" parent="." groups=["attack"] instance=ExtResource("4_ymfbm")]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2(0.5, 2.16667)
shape = SubResource("RectangleShape2D_fynvp")

[connection signal="hurt" from="HurtBox" to="." method="_on_hurt_box_hurt"]

[editable path="HurtBox"]
[editable path="HitBox"]
